Fixed emoji balloon z-index issues.

--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -30,3 +30,7 @@
 	margin-right: -1px;
 	outline: solid 1px hsla(0, 0%, 100%, .5);
 }
+
+div.ck.ck-balloon-panel.ck-emoji-picker-balloon {
+	z-index: calc( var( --ck-z-dialog ) + 1 );
+}
